<resources>
    <string name="app_name">SafePickup</string>
    <string name="FILE_PREF">com.example.safepickup</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoieXBsZW9uZyIsImEiOiJja2dxY2dlN2Iwdno1MnBvaTVpa3QybGM0In0.QDijj62XUB8z7IVHrzK6Kw</string>
    <string name="google_map_access_token">AIzaSyAFJTpfKrzU5opOhtKO1OSIZTERu-y_GPk</string>

    <!--    fragment name-->
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_location">Location</string>

    <!--    account_setting-->
    <string-array name="account_setting">
        <item>History</item>
        <item>Contact</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Logout</item>
    </string-array>

    <!--    dashbaord-->
    <string name="notice">Notice</string>
    <string name="student">Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    login-->
    <string name="welcome_msg">Welcome back!</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Continue</string>
</resources>